# ossloop

./: README.md  pyproject.toml
connectors/: issue_tracker.py
examples/test_fractions/: LOOP_STATE.md  fractions_lite.py  test_fractions_lite.py
examples/test_repo/: LOOP_STATE.md  hello.py  test_hello.py
scripts/: parallel_worktrees.sh  run_loop.sh
skills/: repo-conventions.md
src/ossloop/: __init__.py  checker.py  cli.py  loop.py  maker.py  model_client.py  state.py  verifier.py
src/ossloop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_state.py
