[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ossloop"
version = "0.1.0"
description = "A minimal loop-engineering harness for local Ollama models (built against gpt-oss:20b)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ossloop = "ossloop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
